--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=omar.tapia
 spring.datasource.password=nE5kMc7JCGNqwDQM
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
+
+###########################################################
+limite.retiro = 1000
