--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql_db:3306/bdp_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/bdp_db?allowPublicKeyRetrieval=true&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.username=omar.tapia
 spring.datasource.password=nE5kMc7JCGNqwDQM
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
 ###########################################################
-limite.retiro = 1000
+limite.retiro = 100
