--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mock-server:mockserver-netty:5.11.1'
+    testImplementation 'org.junit.vintage:junit-vintage-engine'
+
 }
 
 test {
